[package]
name = "dailytxt-decrypt-cli"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
colored = "2.0.4"
fernet = "0.2.1"
hmac = "0.12.1"
json = "0.12.4"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
